# wanictf21spring-writeup

./: .gitignore  LICENSE  README.md  ctf.yml
cry/: Makefile
cry/cant-restore-the-flag/: README.md
cry/easy/: README.md
cry/easy/file/: encrypt.py  output.txt
cry/extra/: README.md
cry/oucs/: README.md
cry/simple-conversion/: README.md
for/MixedUSB/: README.md
for/illegal_image/: README.md
for/presentation/: README.md
for/secure_document/: README.md
for/slow/: README.md
mis/ask/: README.md
mis/automaton-lab/: README.md
mis/binary/: README.md
mis/git_master/: README.md
mis/manchester/: README.md
pwn/: README.md
pwn/01-netcat/: Dockerfile  README.md  docker-compose.yml
pwn/02-free-hook/: README.md  docker-compose.yml
pwn/03-rop-machine-easy/: README.md  docker-compose.yml
pwn/04-rop-machine-normal/: README.md  docker-compose.yml
pwn/05-rop-machine-hard/: README.md  docker-compose.yml
pwn/06-srop/: Dockerfile  README.md  docker-compose.yml
pwn/07-tower-of-hanoi/: Dockerfile  README.md  docker-compose.yml
pwn/08-gacha-breaker/: README.md  docker-compose.yml
rev/execute/: README.md
rev/licence/: README.md
rev/secret/: README.md
rev/timer/: README.md
web/cf-basic/: README.md
web/cf-basic/src/: .gitignore  README.md  pyproject.toml  template.yaml
web/cf-basic/src/admin/: app.py
web/cf-basic/src/basic_auth/: app.js
web/cf-basic/src/front/: index.html
web/exception/: README.md
web/fake/: README.md  docker-compose.yml
web/wani_request_1/: README.md
web/wani_request_2/: README.md
web/watch_animal/: README.md
(+187 files in other folders)
