[tool.poetry]
name = "cf-basic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aws-sam-cli = "^1.22.0"

[tool.poetry.dev-dependencies]
cfn-lint = "^0.48.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
